<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tempo Run</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">625563237523982 </string>
    <string name="welcome">Welcome To Tempo Run </string>
    <string name="title_activity_workout_begin">Workout</string>
	<string name="strGenericError">An Error Has Occurred</string>
    <string name="strPreferencesUsername">username</string>
    <string name="strPreferencesPassword">password</string>
    <string name="strBadUsernameOrPassword">Login Failed! Bad Username or Password!</string>
    
    <string-array name="workout_types">
        <item>Free Run</item>
        <item>Tempo Based Run</item>
    </string-array>
        <string name="workout_type_choose_str">Choose A Workout Type:</string>
        <string name="beginWorkoutBtn">Begin Workout</string>
        <string name="strEndWorkout">End Workout</string>
        <string name="strDistance">Distance</string>
        <string name="strEmail">Email</string>
        <string name="strPassword">Password</string>
        <string name="strPasswordConfirm">Confirm Password</string>
        <string name="strCreateAccount">Create Account</string>
        <string name="strAccountCreated">Account Created!</string>
        <string name="strLogin">Login</string>
        <string name="strSignup">Sign Up</string>
        <string name="strUnableToCreateRun">Unable To Start Run! Please Try Again.</string>
        <string name="strWorkoutDetails">Workout Details</string>
        <string name="strTotalTime">Time</string>
        <string name="strCaloriesBurned">Calories Burned</string>
        <string name="strNotes">Notes</string>
        <string name="strSaveRun">Save Run</string>
        <string name="strUnableToFetchRun">Unable To Fetch Run</string>
        <string name="strRunSaved">Run Saved</string>
</resources>
