<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:scrollbars="none" >

<LinearLayout android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="622dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp"
            android:text="@string/strWorkoutDetails"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtCaloriesBurned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="16dp"
            android:text="TextView" />

        <EditText
            android:id="@+id/txtRunNotesEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtCaloriesBurned"
            android:layout_below="@+id/txtCaloriesBurned"
            android:layout_marginTop="86dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtRunNotesEdit"
            android:layout_below="@+id/txtCaloriesBurned"
            android:layout_marginTop="33dp"
            android:text="@string/strNotes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnSaveRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRunNotesEdit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:onClick="onSaveRunClicked"
            android:text="@string/strSaveRun" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtDistanceRun"
            android:layout_centerVertical="true"
            android:text="@string/strCaloriesBurned"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtDistanceRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView4"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginBottom="21dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtDistanceRun"
            android:layout_marginBottom="28dp"
            android:layout_toLeftOf="@+id/textView1"
            android:text="@string/strDistance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginBottom="26dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtTotalTime"
            android:layout_alignLeft="@+id/txtTotalTime"
            android:layout_marginBottom="30dp"
            android:text="@string/strTotalTime"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</LinearLayout>
</ScrollView>